2005-10-19  Jonathan Pryor  <jonpryor@vt.edu>

	* Mono.Posix.dll.sources: Add new files: Mono.Unix/FileAccessPermissions.cs,
	  Mono.Unix/FileSpecialAttributes.cs, Mono.Unix/FileTypes.cs.

2005-10-17  Jonathan Pryor  <jonpryor@vt.edu>

	* Mono.Posix_test.dll.sources: Add Mono.Unix/UnixMarshalTest.cs.

2005-09-20  Jonathan Pryor  <jonpryor@vt.edu>

	* Makefile: Build the make-map.exe in Mono.Unix.Native; add /nowarn:0618 to
	  the build, so that we don't see dozens of warnings about using [Obsolete]
	  code.
	* Mono.Unix.Native: directory added
	* Mono.Posix.dll.sources: Add Mono.Unix.Native/*.cs sources.

2005-08-24  Lluis Sanchez Gual  <lluis@novell.com>

	* Makefile: Removed System.Runtime.Remoting dependency.
	* Mono.Posix.dll.sources: Added new files:
	Mono.Remoting.Channels.Unix/UnixBinaryClientFormatterSink.cs
	Mono.Remoting.Channels.Unix/UnixBinaryClientFormatterSinkProvider.cs
	Mono.Remoting.Channels.Unix/UnixBinaryCore.cs
	Mono.Remoting.Channels.Unix/UnixBinaryServerFormatterSink.cs
	Mono.Remoting.Channels.Unix/UnixBinaryServerFormatterSinkProvider.

2005-07-30  Atsushi Enomoto  <atsushi@ximian.com>

	* Makefile : csc build fix.

2005-07-28  Lluis Sanchez Gual  <lluis@novell.com>

	* Mono.Posix.dll.sources: Add the Unix remoting channel to the build.
	* Makefile: Add System.Runtime.Remoting dependency.

2005-02-28  Jonathan Pryor  <jonpryor@vt.edu>

	* Makefile (TEST_MCS_FLAGS): Ignore warnings 0219 (variable declared and
	  never used) and 0618 (member is obsolete): this is test code, which
	  produces lots of unused variables and tests [Obsolete] members.

2005-02-28  Jonathan Pryor  <jonpryor@vt.edu>

	* Mono.Posix_test.dll.sources: Added Test/Mono.Unix/StdioFileStreamTest.cs.

2005-01-13  Jonathan Pryor  <jonpryor@vt.edu>

	* Mono.Posix_test.dll.sources: Added Test/Mono.Unix/StdlibTest.cs.

2005-01-05  Jonathan Pryor  <jonpryor@vt.edu>

	* Mono.Posix.dll.sources: Add Mono.Unix/StdioFileStream.cs.

2005-01-05  Jonathan Pryor  <jonpryor@vt.edu>
