@@ -1,3 +1,9 @@
+2005-10-21  Jonathan Pryor <jonpryor@vt.edu>
+
+	* FileAccessPattern.cs: Added
+	* UnixFile.cs, UnixStream.cs: Deprecate all the Advise* methods (lots!)
+	  and replace with 6 methods which take a FileAccessPattern enum.
+
 2005-10-19  Jonathan Pryor <jonpryor@vt.edu>
 
 	* FileAccessPermissions.cs, FileSpecialAttributes.cs, FileTypes.cs: Added.
